Convert datafiles of form set1_x.mat to .hdf5

--- a/practical6/Makefile
+++ b/practical6/Makefile
@@ -10,6 +10,10 @@ hdf5:
 nngraph:
 	luarocks install nngraph
 
+.PHONY: mattorch
+mattorch:
+	luarocks install mattorch
+
 .PHONY: eventdetection
 eventdetection:
 	git clone https://github.com/pabloi/dataDriven-eventDetection
